--- a/chinesebqb-md/071辉夜大小姐🎀BQB.md
+++ b/chinesebqb-md/071辉夜大小姐🎀BQB.md
@@ -2,6 +2,42 @@
 title: 071辉夜大小姐🎀BQB
 ---
 
+## 关于辉夜大小姐
+
+辉夜大小姐取自 **辉夜大小姐想让我告白~ 天才们的恋爱头脑战~ ** 是一部学院云恋爱番剧, B站评分9.9,  女主辉夜大小姐拥有四重人格, 四个人格无缝切换, 颜艺丰富,表情包极其多, 整个故事的主战场为学生会,  学生会的其它几位成员**书记藤原千花**(毛越粉,人越狠), **会长白银御行**(超级学霸), **会计石上优**(轻易看透人性IT天才), 也是颜艺高手
+
+
+
+作品本身有很多冷知识, 也可以作为恋爱科普读物
+
+
+
+![2020-06-14-3414726](071%E8%BE%89%E5%A4%9C%E5%A4%A7%E5%B0%8F%E5%A7%90%F0%9F%8E%80BQB.assets/2020-06-14-3414726.png)
+
+
+
+
+
+## 辉夜大小姐的前世今生
+
+作品于2015年开始连载, 截止2020年4月已发布18册单行本, 目前B站买下了国内的独家授权,B站评分在第一梯队,直达链接https://www.bilibili.com/bangumi/play/ep259770
+
+
+
+![image-20200614161122472](071%E8%BE%89%E5%A4%9C%E5%A4%A7%E5%B0%8F%E5%A7%90%F0%9F%8E%80BQB.assets/image-20200614161122472.png)
+
+
+
+
+
+## 小结
+
+**辉夜大小姐想让我告白~ 天才们的恋爱头脑战~** 用优质动漫品质, 衍生了大量的表情包, 与JOJO自造梗不同, 辉夜大小姐善假于物, 利用与其它作品的梦幻联动, 来表达思想, 提升作品品质
+
+
+
+
+
 ------
 ## 以下为收录的表情包库
 
