--- a/chinesebqb-md/071辉夜大小姐🎀BQB.md
+++ b/chinesebqb-md/071辉夜大小姐🎀BQB.md
@@ -12,7 +12,7 @@ title: 071辉夜大小姐🎀BQB
 
 
 
-![2020-06-14-3414726](071%E8%BE%89%E5%A4%9C%E5%A4%A7%E5%B0%8F%E5%A7%90%F0%9F%8E%80BQB.assets/2020-06-14-3414726.png)
+![2020-06-14-3414726](https://www.v2fy.com/asset/0i/ChineseBQB/chinesebqb-md/071%E8%BE%89%E5%A4%9C%E5%A4%A7%E5%B0%8F%E5%A7%90%F0%9F%8E%80BQB.assets/2020-06-14-3414726.png)
 
 
 
@@ -24,7 +24,7 @@ title: 071辉夜大小姐🎀BQB
 
 
 
-![image-20200614161122472](071%E8%BE%89%E5%A4%9C%E5%A4%A7%E5%B0%8F%E5%A7%90%F0%9F%8E%80BQB.assets/image-20200614161122472.png)
+![image-20200614161122472](https://www.v2fy.com/asset/0i/ChineseBQB/chinesebqb-md/071%E8%BE%89%E5%A4%9C%E5%A4%A7%E5%B0%8F%E5%A7%90%F0%9F%8E%80BQB.assets/image-20200614161122472.png)
 
 
 
