--- a/chinesebqb-md/071辉夜大小姐🎀BQB.md
+++ b/chinesebqb-md/071辉夜大小姐🎀BQB.md
@@ -20,19 +20,21 @@ title: 071辉夜大小姐🎀BQB
 
 ## 辉夜大小姐的前世今生
 
-作品于2015年开始连载, 截止2020年4月已发布18册单行本, 目前B站买下了国内的独家授权,B站评分在第一梯队,直达链接https://www.bilibili.com/bangumi/play/ep259770
+作品于2015年开始连载, 截止2020年4月已发布18册单行本, 目前B站买下了国内的独家授权,B站评分在第一梯队,直达链接 [https://www.bilibili.com/bangumi/play/ep259770](https://www.bilibili.com/bangumi/play/ep259770)
 
 
 
 ![image-20200614161122472](https://www.v2fy.com/asset/0i/ChineseBQB/chinesebqb-md/071%E8%BE%89%E5%A4%9C%E5%A4%A7%E5%B0%8F%E5%A7%90%F0%9F%8E%80BQB.assets/image-20200614161122472.png)
 
+## 段子永不眠
 
+Love is War! 恋爱即战争!  ~~天才~~段友们的恋爱头脑战!
 
 
 
 ## 小结
 
-**辉夜大小姐想让我告白~ 天才们的恋爱头脑战~** 用优质动漫品质, 衍生了大量的表情包, 与JOJO自造梗不同, 辉夜大小姐善假于物, 利用与其它作品的梦幻联动, 来表达思想, 提升作品品质
+**辉夜大小姐想让我告白~ 天才们的恋爱头脑战~** 以优质动漫品质, 衍生了大量的表情包, 与JOJO自造梗不同, 辉夜大小姐善假于物, 利用与其它作品的梦幻联动, 来表达思想, 提升作品品质
 
 
 
